# pybind11-awkward-array-test

./: .gitignore  CMakeLists.txt  build.py  pyproject.toml  test_simple.py
pybind11_awkward/: __init__.py
pybind11_awkward/src/: binding.cpp
tests/: test_simple.py
